--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@raphiniert/ra-data-postgrest": "^2.0.0",
+    "@supabase/supabase-js": "^2.39.7",
     "ra-data-fakerest": "^4.14.0",
     "ra-input-rich-text": "^4.14.0",
+    "ra-supabase": "^2.1.0",
     "react": "^18.2.0",
     "react-admin": "^4.14.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "supabase": "^1.145.4"
   },
   "devDependencies": {
     "@types/node": "^18.16.1",
